# rust_eikonal

./: Cargo.toml  LICENSE  README.md  cleanup.sh  eikonal_spec.md  implementation_plan.md  run_demos.sh
.github/workflows/: ci.yml
benches/: solver_bench.rs
src/: core.rs  error.rs  io.rs  lib.rs  main.rs  scheduler.rs  update_kernels.rs
test_fixtures/: generate_marmousi_reference.py
tests/: marmousi_skfmm.rs  verification.rs
