[package]
name = "eikonal-fim"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
ndarray = "0.15"
ndarray-npy = "0.8"
matfile = { version = "0.5", features = ["ndarray"] }
rayon = "1.10"
crossbeam-queue = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "solver_bench"
harness = false

[profile.dev]
opt-level = 1
debug = true

[profile.test]
opt-level = 2
debug = true

[profile.release]
opt-level = 3
lto = "thin"
debug = 1
